[tool.poetry]
name = "telebot"
version = "0.1.0"
description = ""
authors = ["daredevil895 <alex1337boom2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"
virtualenv = "^20.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
